--- a/Blog/Views/AdminPanel/BlogDataPartial.cshtml
+++ b/Blog/Views/AdminPanel/BlogDataPartial.cshtml
@@ -24,8 +24,8 @@
             <textarea asp-for="Description">@Model.Description</textarea>
         </li>
         <li>
-            <label>Phone Number</label>
-            <input asp-for="PhoneNumber" value="@Model.PhoneNumber" />
+            <label>Long description</label>
+            <input asp-for="LongDescription" value="@Model.LongDescription" />
         </li>
         <li>
             <input type="submit" value="Change" />
