--- a/Blog/Views/Archive/Index.cshtml
+++ b/Blog/Views/Archive/Index.cshtml
@@ -5,22 +5,22 @@
 }
 <div>
     <div>
-        <h2>Featured tags:</h2>
-        <span>
+        <h2 class="section_title">Featured tags:</h2>
+        <nav class="archive_navigation">
             @foreach (var tag in Model)
             {
-                <button>@tag.Name</button>
+                <button class="tag_nav main_nav">@tag.Name</button>
             }
-        </span>
+        </nav>
     </div>
     @foreach (var tag in Model)
     {
-        <div>
-            <p><b><i>@tag.Name</i></b></p>
-            <ul>
+        <div class="tag_container">
+            <p class="tag_name">@tag.Name</p>
+            <ul class="tag_posts_list">
                 @foreach (var post in tag.PostTags)
                 {
-                    <li><a asp-controller="Home" asp-action="Read" asp-route-id="@post.PostId">@post.Post.Title</a></li>
+                    <li><a class="post_tag_name" asp-controller="Home" asp-action="Read" asp-route-id="@post.PostId">@post.Post.Title</a></li>
                 }
             </ul>
         </div>
