--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -6,4 +6,11 @@
 }
 @await Html.PartialAsync("PostsPartial", Model.Posts)
 @await Html.PartialAsync("PageNavigationPartial", (int)ViewBag.PagesCount)
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+
+@section BottomOfThePage
+{
+    <script src="~/JavaScript/GetDate.js"></script>
+    <script>
+        getDates('post_pub_date');
+    </script>
+}
