--- a/Blog/Views/Home/PageNavigationPartial.cshtml
+++ b/Blog/Views/Home/PageNavigationPartial.cshtml
@@ -3,6 +3,6 @@
 <nav class="pages_wraper">
     @for (int i = 0; i < Model; i++)
     {
-        <a class="page_number" asp-action="Pages" asp-route-page="@(i + 1)">@(i + 1)</a>
+        <a class="page_number main_nav" asp-action="Pages" asp-route-page="@(i + 1)">@(i + 1)</a>
     }
 </nav>
