--- a/Blog/wwwroot/css/main.css
+++ b/Blog/wwwroot/css/main.css
@@ -7,6 +7,10 @@ body {
     background-color: #f3f7c5;
 }
 
+.content_container {
+    width: 60%;
+}
+
 #flex_container {
     font-family: 'Anonymous Pro', monospace;
     display: flex;
@@ -53,10 +57,6 @@ body {
     background-color: #1594c6;
 }
 
-.content_container {
-    width: 40%;
-}
-
 .post_preview {
     display: flex;
     flex-direction: column;
@@ -72,25 +72,14 @@ body {
     font-family: 'Ubuntu Mono', monospace;
 }
 
-.post_title {
-    display: block;
-    background-color: #0f6a8e;
+.section_title {
     width: 100%;
     text-align: center;
+    background-color: #0f6a8e;
+    color: #f3f7c5;
 }
 
-    .post_title a:link, .post_title a:visited {
-        color: #f3f7c5;
-        text-decoration: none;
-        display: block;
-    }
-
-    .post_title a:hover {
-        background-color: #f3f7c5;
-        color: #0f6a8e;
-    }
-
-.author_name {
+.author_data, .tag_name {
     font-weight: bold;
     color: #0f6a8e;
 }
@@ -114,18 +103,83 @@ body {
     font-size: 25px;
 }
 
-    .page_number:visited, .page_number:link {
-        text-decoration: none;
+.main_nav:visited, .main_nav:link {
+    display: block;
+    text-decoration: none;
+    color: #f3f7c5;
+    background-color: #0f6a8e;
+    width: 100%;
+}
+
+.main_nav:hover {
+    color: #0f6a8e;
+    background-color: #f3f7c5;
+}
+
+.post_info_wraper {
+    text-align: center;
+}
+
+.post_content_container, .blog_description {
+    border-width: 5px 0;
+    border-style: dotted;
+    border-color: #0f6a8e;
+}
+
+.comment_form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+    .comment_form button {
+        background-color: #0f6a8e;
         color: #f3f7c5;
+        border: none;
     }
 
-    .page_number:hover {
-        color: #0f6a8e;
-        background-color: #f3f7c5;
+#comment_content_input, #comment_author_input {
+    border-color: #b5c6ce;
+    border-style: solid;
+    border-width: thin;
+}
+
+.archive_navigation {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.tag_nav {
+    background-color: #0f6a8e;
+    border: none;
+    color: #f3f7c5;
+    padding: 5px 10px 5px 10px;
+    font-size: 21px;
+}
+
+.tag_posts_list {
+    list-style: none;
+    padding: 0;
+}
+
+.tag_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.post_tag_name {
+    padding: 5px;
+    margin: 5px;
+}
+
+    .post_tag_name:link, .post_tag_name:visited {
+        color: #608a9b;
+        font-weight: bold;
     }
 
 @media only screen and (max-width: 640px) {
-
     #flex_container {
         flex-direction: column;
         align-items: center;
@@ -153,5 +207,14 @@ body {
     .right_margin {
         width: 100%;
         height: 20%;
+    }
+
+    .archive_navigation {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    .content_container {
+        width: 90%;
     }
 }
