--- a/Blog/Views/AdminPanel/BlogDataPartial.cshtml
+++ b/Blog/Views/AdminPanel/BlogDataPartial.cshtml
@@ -5,7 +5,7 @@
 @model Blog.Models.Other.BlogData
 <!DOCTYPE html>
 
-<form asp-action="ModifyBlogData" asp-controller="AdminPanel">
+<form asp-action="ModifyBlogData">
     <ul>
         <li>
             <label>Blog Name</label>
