--- a/Blog/Views/AdminPanel/BlogDataPartial.cshtml
+++ b/Blog/Views/AdminPanel/BlogDataPartial.cshtml
@@ -5,7 +5,7 @@
 @model Blog.Models.Other.BlogData
 <!DOCTYPE html>
 
-<form asp-action="ModifyBlogData" asp-controller="AdminPanelController">
+<form asp-action="ModifyBlogData" asp-controller="AdminPanel">
     <ul>
         <label>Blog Name</label>
         <input asp-for="BlogName" value="@Model.BlogName" />
