--- a/Blog/Views/AdminPanel/BlogDataPartial.cshtml
+++ b/Blog/Views/AdminPanel/BlogDataPartial.cshtml
@@ -14,7 +14,7 @@
         <label>Email Address</label>
         <input asp-for="MailAddress" value="@Model.MailAddress" />
         <label>Description</label>
-        <textarea asp-for="Description">@Model.Description</textarea>
+        <textarea asp-for="Description" value="@Model.Description"></textarea>
         <label>Long description</label>
         <input asp-for="LongDescription" value="@Model.LongDescription" />
         <input type="submit" value="Change" />
